--- a/JavaScript/Q1/index.html
+++ b/JavaScript/Q1/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="css/style.css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
-  <title>Kodluyoruz Javascript Saat Ödevi</title>
+  <title>Emre Keskin - Kodluyoruz Javascript Saat Ödevi</title>
 </head>
 
 <body class="bg-dark">
